# Company-Package-Urvi

./: Dockerfile  README.md  __init__.py  base_company.py  module1.py  pyproject.toml  version.py
company.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
where_to_extract/company/: version.py
where_to_extract/company-0.0.0b1.dev4+gb0690c127.d20251103.dist-info/: METADATA  RECORD
where_to_extract/company/medical/: medical.py
