[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "company" # name of the package must match the core folder name
dynamic = ["version"]
description = "A Python package for modeling companies across various sectors."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Urvi", email = "nath.urvi@gmail.com" },
    { name = "Boris", email = "boris.bolliet@gmail.com" }
]
keywords = ["companies", "finance", "healthcare", "technology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
]

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/un2107/companies_package"
"Issues" = "https://github.com/un2107/companies_package/issues"


[tool.setuptools_scm]
write_to = "company/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]